# scnx-rateman

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
RateMan/: README.md  requirements.txt  setup.py
RateManager/: setup.py
demo/: ap_list.csv  ap_list_sample.csv  basic_viz_demo.py  check_data_batch_demo.py  check_data_demo.py  dash_live_update_demo.py  dash_live_update_example.py  parse_data_demo.py  parse_data_set_rate_demo.py  rateman_refactoring_demo.py
docs/: keys.json
examples/: basic.py  common.py  example_rc.py  example_rc_pause_resume.py  py_minstrel_ht_bluse.py  rate_control.py  rate_control_fail.py  rate_control_kernel_adaptive.py  rate_control_manual_mrr_setter.py  rate_control_pause_resume.py  rate_control_py_minsrel_passive.py  rate_control_py_minstrel_ht.py  rate_control_py_thompson_sampling.py  rate_power_control_manual_mrr_setter.py  rate_power_control_minstrel_ht_blues.py  rate_power_control_py_minstrel_ht_fixed.py  rc_example.py  rc_failing.py  rc_kernel_minstrel_dynamic_freqs.py  rc_manual_mrr_setter.py  rc_pause_resume.py  rc_py_minstrel_ht.py  rc_py_minstrel_ht_passive.py  rc_py_thompson_sampling.py  rssi_logger.py  tpc_manual_mrr_setter.py  tpc_py_minstrel_ht_blues.py  tpc_py_minstrel_ht_bluse.py  tpc_py_minstrel_ht_fixed.py
python/: connection.py  enable_txs.py  telnet_output.txt  telnet_py.py
rateman/: __init__.py  accesspoint.py  c_parsing.html  c_parsing.pyx  c_sta_rate_stats.html  c_sta_rate_stats.pyx  cli.py  exception.py  parsing.py  rate_control.py  rate_info.py  rateman.py  station.py  tasks.py
(+66 files in other folders)
