[build-system]
requires = ["setuptools>=61.0", "cython>=3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rateman"
version = "0.0.1"
authors = [
  { name="supraconex", email="supraconex@supraconex.org" },
]
description = "Rate Monitor and Controlling"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/supraconex.org"
"Bug Tracker" = "https://github.com/supraconex.org/issues"
